reverting black borders around game - messed up alignment of elements. will fix later!

--- a/public/stylesheets/game1.css
+++ b/public/stylesheets/game1.css
@@ -5,7 +5,6 @@
 .gameSize {
 	width: 		528px;
 	height: 	276px;
-	border:		3px solid black;
 }
 
 .homeroomText  {
