--- a/public/stylesheets/game2.css
+++ b/public/stylesheets/game2.css
@@ -5,7 +5,6 @@
 .gameSize {
 	width: 		1056px;
 	height: 	552px;
-	border:		6px solid black;
 }
 
 .homeroomText  {
